Corrected based on Mobile Width

--- a/frontend/src/pages/Cart/cartPage.module.css
+++ b/frontend/src/pages/Cart/cartPage.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  justify-content: center;
   align-items: center;
-  margin: 1.5rem;
   margin-top: 0.5rem;
 }
