--- a/frontend/src/pages/Dashboard/dashboard.module.css
+++ b/frontend/src/pages/Dashboard/dashboard.module.css
@@ -12,7 +12,7 @@
 }
 
 .menu a {
-  width: 22rem;
+  width: 360px;
   height: 11rem;
   margin: 1.5rem 2rem;
   background-color: whitesmoke;
